--- a/library.properties
+++ b/library.properties
@@ -1,5 +1,5 @@
 name=ByteBuffer
-version=0.1.0
+version=0.1.1
 author=Sean Zheng <>
 maintainer=Sean Zheng <>
 sentence=A ByteBuffer library.
@@ -8,4 +8,4 @@ category=Data Processing
 url=https://github.com/seanzhengw/ByteBuffer
 architectures=*
 repository=https://github.com/seanzhengw/ByteBuffer.git
-includes=ByteBuffer.h
+includes=ByteBuffer/ByteBuffers.h
