Fix Arduino IDE compatibility

--- a/library.properties
+++ b/library.properties
@@ -1,11 +1,11 @@
 name=ByteBuffer
 version=0.1.1
-author=Sean Zheng <>
-maintainer=Sean Zheng <>
+author=Sean Zheng <seanzhengw@gmail.com>
+maintainer=Sean Zheng <seanzhengw@gmail.com>
 sentence=A ByteBuffer library.
 paragraph=ByteBuffer provides a stream-like read/write interface for byte array.
 category=Data Processing
 url=https://github.com/seanzhengw/ByteBuffer
 architectures=*
 repository=https://github.com/seanzhengw/ByteBuffer.git
-includes=ByteBuffer/ByteBuffers.h
+includes=ByteBuffers.h
